<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_empty">No contacts yet</string>
    <string name="text_view_label_add_contact">Add a Contact</string>
    <string name="edit_text_new_contact" />
    <string name="edit_text_new_contact_hint">Contact Name</string>
    <string name="button_add_contact">Done</string>
    <string name="text_view_list_contact" />
    <string name="action_add">Add contact</string>
    <string name="edit_text_new_contact_last_name_hint">Last Name</string>
    <string name="edit_text_new_contact_last_name" />
    <string name="edit_text_new_contact_nick_name_hint">Nick Name</string>
    <string name="edit_text_new_contact_nick_name" />
    <string name="button_take_picture">Take a picture</string>
    <string name="text_view_nikname_on_list" />

</resources>
