<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:gravity="top">

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_label_add_contact"
        android:id="@+id/text_view_label_add_task"
        android:layout_weight="0.02"
        android:gravity="center|center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_new_contact_name"
        android:layout_weight="0.02"
        android:text="@string/edit_text_new_contact"
        android:hint="@string/edit_text_new_contact_hint"
        android:paddingLeft="20dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_new_contact_last_name"
        android:layout_weight="0.02"
        android:text="@string/edit_text_new_contact_last_name"
        android:hint="@string/edit_text_new_contact_last_name_hint"
        android:paddingLeft="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_new_contact_nick_name"
        android:layout_weight="0.02"
        android:text="@string/edit_text_new_contact_nick_name"
        android:hint="@string/edit_text_new_contact_nick_name_hint"
        android:paddingLeft="20dp" />

    <!-- Capture picture button -->
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_pre"
        android:layout_weight="0.02" />

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_take_picture"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_contact"
        android:id="@+id/button_add_contact"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02" />
</LinearLayout>